--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
   }
 
   .brands__title{
-    width: 320px;
+    width: 100%;
     height: 80px;
     border-top: solid 1px #D9FFF5;
     background-image: linear-gradient(to right, #F8F8F8, white);
@@ -163,7 +163,7 @@
     .brands__link{
         display: inline-block;
         height: auto;
-        margin-left: 0 0 0 16px;
+        margin: 0 0 0 16px;
         line-height: 0;
         padding: 0;
     }
@@ -205,8 +205,6 @@
         background-size: cover;
         width: 8px;
         height: 11px;
-        border: none;
-        padding: 0;
         margin-left: 0;
         margin-right: 10px;
         cursor: pointer;
@@ -222,11 +220,8 @@
         background-size: cover;
         width: 8px;
         height: 11px;
-        border: none;
-        padding: 0;
         margin-left: 0;
         margin-right: 10px;
-        cursor: pointer;
         transform:rotate(180deg);
       }
   }
